<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
android:id="@+id/fragment_swap"
    tools:ignore="ExtraText">

    <LinearLayout
        android:paddingTop="0dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/linearLayouttext"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/textNazivArtikla"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:paddingBottom="@dimen/common_padding"
            android:text="@string/NazivArtikla"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_weight="0.60"

            android:gravity="center"
            android:paddingTop="3dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="16dp"

        android:id="@+id/linearLayouttext3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/textBarCode"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:paddingBottom="@dimen/common_padding"
            android:text="@string/BarCode"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvBarCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_weight="0.60"

            android:gravity="center"
            android:padding="0dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="16dp"

        android:id="@+id/linearLayoutcijena"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/textCijena"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:paddingBottom="@dimen/common_padding"
            android:text="Cijena"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_weight="0.60"

            android:gravity="center"
            android:padding="0dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="16dp"

        android:id="@+id/linearLayoutJM"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">

        <TextView
            android:id="@+id/textJedicnicaMjere"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:paddingBottom="@dimen/common_padding"
            android:text="@string/Jedinica"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvJedinica_mjere"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_weight="0.60"

            android:gravity="center"
            android:padding="0dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:paddingTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="16dp"

        android:id="@+id/linearLayoutstanje"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp">

        <TextView
            android:id="@+id/textStanje"
            android:layout_width="0dp"
            android:layout_weight="0.40"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="left"
            android:paddingBottom="@dimen/common_padding"
            android:text="@string/Stanje"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvStanje"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_weight="0.60"

            android:gravity="center"
            android:padding="0dp"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/llAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="0.40"
        android:padding="16dp"

        android:layout_marginTop="260dp"
       >

        <!--<TextView-->
            <!--android:id="@+id/textView2"-->
            <!--android:layout_width="0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.3"-->
            <!--android:textSize="17dp"-->
            <!--android:gravity="center_vertical|end"-->
            <!--android:text="@string/quantity" />-->

        <!--<Spinner-->
            <!--android:id="@+id/spQuantity"-->
            <!--android:layout_width="0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.25"/>-->

        <Button
            android:id="@+id/bOrder"
            android:layout_width="0dp"
            android:layout_height="43dp"
           android:layout_marginLeft="180dp"

            android:layout_weight="0.4"
            android:background="@color/colorPrimary"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"

        android:layout_marginTop="150dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="@dimen/common_padding"
            android:paddingTop="@dimen/common_padding"
            android:text="Kolicina"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_header_text_size"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlHardcoded"
            android:layout_weight="0.4" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:ems="10"
            android:hint="Unesite kolicinu"
            android:inputType="numberDecimal"
            android:paddingLeft="10sp"
            android:text=""
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry"
            android:layout_weight="0.6" />


    </LinearLayout>
    <LinearLayout
        android:paddingTop="0dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/linearLayout2"



        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txCij"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="@dimen/common_padding"
            android:paddingTop="@dimen/common_padding"
            android:text="Nova cijena"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_header_text_size"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <EditText
            android:id="@+id/new_price"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.55"

            android:ems="10"
            android:paddingLeft="8dp"
            android:focusable="true"
            android:hint="Unesite novu cijenu"
            android:inputType="numberDecimal"
            android:text=""
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
    </LinearLayout>


</RelativeLayout>
